infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      name: posts
      protocol: TCP
      targetPort: 4000
  type: NodePort
